<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context="com.bdqn.visitshop.activity.MeDataActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <include layout="@layout/title_bar_activity" />

        <LinearLayout
            style="@style/MeData_layout"
            android:layout_marginTop="@dimen/margin_26">

            <TextView
                android:id="@+id/name"
                style="@style/MeData_Text_Left"
                android:text="@string/activity_medata_tv_name" />

            <TextView
                android:id="@+id/et_name"
                style="@style/MeData_Text_Right"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            style="@style/MeData_layout"
            android:layout_marginTop="17dp">

            <TextView
                android:id="@+id/nickname"
                style="@style/MeData_Text_Left"
                android:text="@string/activity_medata_tv_nickname" />

            <EditText
                android:id="@+id/et_nickname"
                style="@style/MeData_Text_Right"
                android:layout_toRightOf="@id/nickname" />
        </LinearLayout>

        <LinearLayout
            style="@style/MeData_layout"
            android:layout_marginTop="17dp">

            <TextView
                style="@style/MeData_Text_Left"
                android:text="@string/activity_medata_tv_phone" />

            <EditText
                android:id="@+id/et_phone"
                style="@style/MeData_Text_Right"
                android:inputType="phone" />
        </LinearLayout>

        <LinearLayout
            style="@style/MeData_layout"
            android:layout_marginTop="17dp">

            <TextView
                style="@style/MeData_Text_Left"
                android:text="@string/activity_medata_tv_sex" />


            <Spinner
                android:id="@+id/sp_sex"
                style="@style/MeData_Spinner"></Spinner>
        </LinearLayout>

        <LinearLayout
            style="@style/MeData_layout"
            android:layout_marginTop="17dp">

            <TextView
                style="@style/MeData_Text_Left"
                android:text="@string/activity_medata_tv_role" />


            <TextView
                android:id="@+id/tv_role"
                style="@style/MeData_Text_Right"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            style="@style/MeData_layout"
            android:layout_marginTop="17dp">

            <TextView
                style="@style/MeData_Text_Left"
                android:text="@string/activity_medata_tv_area" />


            <TextView
                android:id="@+id/tv_area"
                style="@style/MeData_Text_Right"
                android:text="" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_20"
            android:background="@mipmap/btn_bg"
            android:text="提交"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize_16" />
    </LinearLayout>

    <include
        android:id="@+id/loading"
        layout="@layout/progressbar_custom_rl"
        android:visibility="gone" />
</RelativeLayout>
