<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_menu_bottom"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@color/color_bottom_layout_bg"
    android:layout_alignParentBottom="true"
    android:layout_gravity="center_vertical"
    ><!--每一个权重都为1-->
    <TextView
        android:id="@+id/txt_menu_bottom_home"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.0"
        android:drawablePadding="@dimen/bottom_img_padding"
        android:drawableTop="@drawable/menu_home_style"
        android:gravity="center"
        android:padding="@dimen/bottom_img_padding"
        android:text="@string/txt_home"
        android:textColor="@color/color_txt_bottom_style"
        android:textSize="@dimen/bottom_text_size"/>

    <TextView
        android:id="@+id/txt_menu_bottom_shop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.0"
        android:drawablePadding="@dimen/bottom_img_padding"
        android:drawableTop="@drawable/menu_shop_style"
        android:gravity="center"
        android:padding="@dimen/bottom_img_padding"
        android:text="@string/txt_shop"
        android:textColor="@color/color_txt_bottom_style"
        android:textSize="@dimen/bottom_text_size"/>
    <TextView
        android:id="@+id/txt_menu_bottom_visit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.0"
        android:drawablePadding="@dimen/bottom_img_padding"
        android:drawableTop="@drawable/menu_visit_style"
        android:gravity="center"
        android:padding="@dimen/bottom_img_padding"
        android:text="@string/txt_visit"
        android:textColor="@color/color_txt_bottom_style"
        android:textSize="@dimen/bottom_text_size"/>

    <TextView
        android:id="@+id/txt_menu_bottom_train"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.0"
        android:drawablePadding="@dimen/bottom_img_padding"
        android:drawableTop="@drawable/menu_train_style"
        android:gravity="center"
        android:padding="@dimen/bottom_img_padding"
        android:text="@string/txt_train"
        android:textColor="@color/color_txt_bottom_style"
        android:textSize="@dimen/bottom_text_size"/>

    <TextView
        android:id="@+id/txt_menu_bottom_me"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.0"
        android:drawablePadding="@dimen/bottom_img_padding"
        android:drawableTop="@drawable/menu_me_style"
        android:gravity="center"
        android:padding="@dimen/bottom_img_padding"
        android:text="@string/txt_me"
        android:textColor="@color/color_txt_bottom_style"
        android:textSize="@dimen/bottom_text_size"/>
</LinearLayout>