<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:id="@+id/exit_dialog"
    android:background="@drawable/shape_corner_white"
    android:orientation="vertical"
     >
     <!-- android:layout_margin="@dimen/dialog_marginTop" -->
    <!-- android:text="@string/whether_to_exit_the_browser" -->
     <TextView 
         android:id="@+id/exit_title"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:textSize="18sp"
         android:paddingTop="12dp"
         android:paddingBottom="12dp"
         android:textColor="#000000"
         android:text="@string/dialog_exit_title"
         android:layout_gravity="center_horizontal"
         />
     <View 
         android:layout_height="1px"
         android:layout_width="260dp"
         android:background="#000000"
         />
    
    <LinearLayout
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:gravity="center"
         >

        <Button
            android:id="@+id/btn_exit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/exit_bg_selector"
            android:drawablePadding="4dp"
            android:gravity="center"
            android:textColor="#000000"
            android:singleLine="true"
            android:text="@string/dialog_exit_positive"
            android:textSize="@dimen/pop_txt_size" />
        <View 
         android:layout_height="match_parent"
         android:layout_width="1px"
         android:background="#000000"
         />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/cancel_bg_selector"
            android:drawablePadding="4dp"
            android:gravity="center"
            android:textColor="#000000"
            android:singleLine="true"
            android:text="@string/dialog_exit_cancel"
            android:textSize="@dimen/pop_txt_size" />
    </LinearLayout>

</LinearLayout>
